# openbrowser-ai

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh  pyproject.toml  server.json
.claude-plugin/: marketplace.json
.codex/: INSTALL.md
.github/workflows/: publish.yml  test.yml
.opencode/: INSTALL.md
.opencode/plugins/: openbrowser.js
backend/: Dockerfile  env.example  pyproject.toml
backend/app/: main.py
backend/kiosk/: chromium-policies.json  key_grabber.py
benchmarks/: e2e_4way_cli_benchmark.py  e2e_4way_cli_results.json  e2e_codeagent_test.py  e2e_llm_benchmark.py  e2e_llm_stats.py  e2e_llm_stats_results.json  e2e_published_test.py  stats_cdp.json  stats_openbrowser.json  stats_playwright.json  test_e2e_benchmark_verify.py
data/mind2web/: train.json
docs/: cli-comparison.mdx  comparison.mdx  docs.json  quickstart.mdx
docs/development/: n8n-integration.mdx
examples/benchmarks/: comprehensive_benchmark.py
examples/mcp/: advanced_server.py  simple_server.py
examples/models/: aws.py  oci_models.py
examples/ui/: command_line.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js
frontend/: env.local.example  package-lock.json
infra/: Makefile
infra/eval/: disaster_recovery_demo.sh
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
src/openbrowser/: __init__.py  cli.py  init_cmd.py  models.py
stress-tests/: llms-full.txt
stress-tests/challenges/: graphql-form.html  iframe-inception-form.html  rich-text-form.html
tests/: conftest.py  profiling.py  test_actor_element.py  test_actor_element_page_gaps.py  test_actor_mouse.py  test_actor_page.py  test_actor_utils.py  test_advanced_features.py  test_agent_gif_graph_coverage.py  test_agent_message_manager_coverage.py  test_agent_prompts_coverage.py  test_agent_service.py  test_agent_service_coverage.py  test_agent_service_deep_coverage.py  test_agent_views.py  test_agent_views_coverage.py  test_browser_events.py  test_browser_profile.py  test_browser_session_coverage.py  test_browser_views.py  test_cli_c_help.py  test_cli_coverage.py  test_cli_deep_coverage.py  test_code_use_formatting.py  test_code_use_init_coverage.py  test_code_use_namespace.py  test_code_use_namespace_coverage.py  test_code_use_service.py  test_code_use_service_coverage.py  test_code_use_service_deep_coverage.py  test_code_use_utils.py  test_code_use_views.py  test_config.py  test_config_coverage.py  test_crash_watchdog_coverage.py  test_daemon.py  test_daemon_client.py  test_daemon_client_coverage.py  test_daemon_integration.py  test_daemon_server.py  (+81 more)
(+156 files in other folders)
